surse/err31.txt
prob31.cpp: In function ‘int main()’:
prob31.cpp:20:16: error: ‘B’ is an inaccessible base of ‘D’
     B* p = new D; //(1)
                ^